--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,8 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+#ECLIPSE================
+
 *.pydevproject
 .metadata
 .gradle
@@ -54,21 +56,31 @@ tmp/
 local.properties
 .settings/
 .loadpath
+
 # Eclipse Core
 .project
+
 # External tool builders
 .externalToolBuilders/
+
 # Locally stored "Eclipse launch configurations"
 *.launch
+
 # CDT-specific
 .cproject
+
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
+
 # Java annotation processor (APT)
 .factorypath
+
 # PDT-specific
 .buildpath
+
 # sbteclipse plugin
 .target
+
 # TeXlipse plugin
 .texlipse
+
